--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Discover Amazing places in Japan</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="./style.css">
 	<link rel="stylesheet" href="img">
 </head>
 <body>
@@ -145,7 +145,7 @@
 
 
 					<figure class="places_card places_card_size_lg">
-						<img src="./img/place-1.jpg" alt="Mount Fuji" class="places_card-pic places_card-pic_size_lg">
+						<img src="./img/place-1-min.jpg" alt="Mount Fuji" class="places_card-pic places_card-pic_size_lg">
 						<figcaption class="places_card-title">
 							Mount Fuji
 						</figcaption>
@@ -154,16 +154,15 @@
 
 
 					<figure class="places_card places_card_size_lg">
-						<img src="./img/place-2.jpg" alt="Kyoto" class="places_card-pic places_card-pic_size_lg">
+						<img src="./img/place-2-min.jpg" alt="Kyoto" class="places_card-pic places_card-pic_size_lg">
 						<figcaption class="places_card-title">
 							Kyoto
 						</figcaption>
 						<a href="#!" class="places_card-link"></a>
 					</figure>
 
-
 					<figure class="places_card places_card_size_sm">
-						<img src="./img/place-3.jpg" alt="Tokyo" class="places_card-pic places_card-pic_size_sm">
+						<img src="./img/place-3-min.jpg" alt="Tokyo" class="places_card-pic places_card-pic_size_sm">
 						<figcaption class="places_card-title">
 							Tokyo
 						</figcaption>
@@ -172,7 +171,7 @@
 
 
 					<figure class="places_card places_card_size_sm">
-						<img src="./img/place-4.jpg" alt="Niigata" class="places_card-pic places_card-pic_size_sm">
+						<img src="./img/place-4-min.jpg" alt="Niigata" class="places_card-pic places_card-pic_size_sm">
 						<figcaption class="places_card-title">
 							Niigata
 						</figcaption>
@@ -181,7 +180,7 @@
 					
 
 					<figure class="places_card places_card_size_sm">
-						<img src="./img/place-5.jpg" alt="Sapporo" class="places_card-pic places_card-pic_size_sm">
+						<img src="./img/place-5-min.jpg" alt="Sapporo" class="places_card-pic places_card-pic_size_sm">
 						<figcaption class="places_card-title">
 							Sapporo
 						</figcaption>
@@ -202,7 +201,7 @@
 			<div class="wrapper-full">
 				<div class="tours_tour  tour">
 					<div class="tour_pic">
-						<img src="./img/tour-1.jpg" alt="Prefecture in Focus: Tottori" class="tour_thumb">
+						<img src="./img/tour-1-min.jpg" alt="Prefecture in Focus: Tottori" class="tour_thumb">
 					</div>
 					<div class="tour_info">
 						<h3 class="tour_title">
@@ -232,7 +231,7 @@
 						</a>
 					</div>
 					<div class="tour_pic tour_pic_mob_firse">
-						<img src="./img/tour-2.jpg" alt="Featured Neighborhood: Kyoto’s Arashiyama" class="tour_thumb">
+						<img src="./img/tour-2-min.jpg" alt="Featured Neighborhood: Kyoto’s Arashiyama" class="tour_thumb">
 					</div>
 				</div>
 
@@ -254,7 +253,7 @@
 
 					<div class="top_card">
 						<div class="top_card-pic">
-							<img src="./img/top-pic-1.jpg" alt="NAGOYA" class="top_card_thumb">
+							<img src="./img/top-pic-1-min.jpg" alt="NAGOYA" class="top_card_thumb">
 							<div class="top_card-stats">
 								<h3 class="top_card-title">
 									NAGOYA
@@ -284,7 +283,7 @@
 
 					<div class="top_card">
 						<div class="top_card-pic">
-							<img src="./img/top-pic-2.jpg" alt="NIIGATA" class="top_card_thumb">
+							<img src="./img/top-pic-2-min.jpg" alt="NIIGATA" class="top_card_thumb">
 							<div class="top_card-stats">
 								<h3 class="top_card-title">
 									NIIGATA
@@ -314,7 +313,7 @@
 
 					<div class="top_card">
 						<div class="top_card-pic">
-							<img src="./img/top-pic-3.jpg" alt="OSAKA" class="top_card_thumb">
+							<img src="./img/top-pic-3-min.jpg" alt="OSAKA" class="top_card_thumb">
 							<div class="top_card-stats">
 								<h3 class="top_card-title">
 									OSAKA
@@ -345,7 +344,7 @@
 
 					<div class="top_card">
 						<div class="top_card-pic">
-							<img src="./img/top-pic-4.jpg" alt="SAITAMA" class="top_card_thumb">
+							<img src="./img/top-pic-4-min.jpg" alt="SAITAMA" class="top_card_thumb">
 							<div class="top_card-stats">
 								<h3 class="top_card-title">
 									SAITAMA
@@ -376,7 +375,7 @@
 
 					<div class="top_card">
 						<div class="top_card-pic">
-							<img src="./img/top-pic-5.jpg" alt="UENO" class="top_card_thumb">
+							<img src="./img/top-pic-5-min.jpg" alt="UENO" class="top_card_thumb">
 							<div class="top_card-stats">
 								<h3 class="top_card-title">
 									UENO
@@ -407,7 +406,7 @@
 
 					<div class="top_card">
 						<div class="top_card-pic">
-							<img src="./img/top-pic-6.jpg" alt="SHIBUYA" class="top_card_thumb">
+							<img src="./img/top-pic-6-min.jpg" alt="SHIBUYA" class="top_card_thumb">
 							<div class="top_card-stats">
 								<h3 class="top_card-title">
 									SHIBUYA
@@ -457,7 +456,7 @@
 		<div class="wrapper">
 			<div class="footer_item">
 				<div class="footer_logo">
-					<img src="./img/svg/odigo-logo-footer.svg" alt="Discover Amazing places in Japan" class="footer_logo-pic">
+					<img src="./img/svg/odigo-logo.svg" alt="Discover Amazing places in Japan" class="footer_logo-pic">
 				</div>
 				<nav class="footer_nav">
 					<ul class="footer_menu">
@@ -519,6 +518,6 @@
 		</div>
 	</footer>
 	<!-- footer end -->
-	<script src="./js/main.js"></script>
+	<script src="./js/main-es5.min.js"></script>
 </body>
 </html>
